# gazebo_maritime

./: .gitignore  CMakeLists.txt  LAUNCH_GUIDE.md  README.md  USAGE.md  keyboard_control.py  run_simulation.sh
models/tethys/: added_mass_params.yaml  model.sdf
models/tethys_equipped/: model.sdf
models/tethys_keyboard_control/: added_mass_params.yaml  model.config  model.sdf
models/underwater_vehicle/: model.config  model.sdf
src/: fluid_drag_system.cpp
worlds/: buoyant_lrauv.sdf  restoring_moments.sdf  underwater.sdf  underwater_keyboard_control.sdf  water_world.sdf  water_world_new.sdf
